# poery-project1

./: pyproject.toml
poery_project1/: main.py
poery_project1/scripts/: say_hello.py
